--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html>
 <head>
 	<title>Bootstrap</title>
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="main.css">
+
 </head>
 
 <body>
+	<div class="container">
+		<h1>Hello world</h1>
+	</div>
 
-<h1>Hello world</h1>
-
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 </html>
