--- a/index.html
+++ b/index.html
@@ -10,8 +10,23 @@
 
 <body>
 	<div class="container">
-		<h1>Hello world</h1>
+		<div class="row">
+			<div class="col-md-12"><h1>Welcome to my Website!</h1></div>
+		</div>
+		<div class="row">
+			<div class="col-md-4">Sidebar</div>
+			<div class="col-md-8">Main</div>		
+		</div>
+		<div class="row">
+			<div class="col-md-3">Facebook</div>
+			<div class="col-md-3">Twitter</div>
+			<div class="col-md-3">Instagram</div>
+			<div class="col-md-3">Github</div>
+		</div>
 	</div>
+
+	
+
 
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
