--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 			<div class="col-md-4">Sidebar</div>
 			<div class="col-md-8">Main</div>		
 		</div>
-		<div class="row">
+		<footer class="row">
 			<div class="col-md-3">Facebook</div>
 			<div class="col-md-3">Twitter</div>
 			<div class="col-md-3">Instagram</div>
 			<div class="col-md-3">Github</div>
-		</div>
+		</footer>
 	</div>
 
 	
