added picture of a ham

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12"><h1>Welcome to my Website!</h1></div>
+			<img class="header-image" src="http://i.imgur.com/Ozht9P5.jpg">
 		</div>
 		<div class="row">
 			<div class="col-md-4">Sidebar</div>
@@ -32,6 +33,8 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 </html>
+
+
 
 
 
