--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 		<footer class="row">
 			<div class="col-md-3"><a href="https://www.facebook.com/">Facebook</a></div>
 			<div class="col-md-3"><a href="https://www.twitter.com/">Twitter</a></div>
-			<div class="col-md-3"><a href="https://instagram.com/">Instagram</a></div>
-			<div class="col-md-3">Github</div>
+			<div class="col-md-3"><a href="https://www.instagram.com/">Instagram</a></div>
+			<div class="col-md-3"><a href="https://www.github.com/">Github</a></div>
 		</footer>
 	</div>
 
