--- a/index.html
+++ b/index.html
@@ -10,7 +10,72 @@
 
 <body>
 	<div class="container">
-		
+		<!-- Stack the columns on mobile by making one full-width and the other half-width -->
+		<div class="row">
+		  <div class="col-xs-12 col-md-8">.col-xs-12 .col-md-8</div>
+		  <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
+		</div>
+
+		<!-- Columns start at 50% wide on mobile and bump up to 33.3% wide on desktop -->
+		<div class="row">
+		  <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
+		  <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
+		  <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
+		</div>
+
+		<!-- Columns are always 50% wide, on mobile and desktop -->
+		<div class="row">
+		  <div class="col-xs-6">.col-xs-6</div>
+		  <div class="col-xs-6">.col-xs-6</div>
+		</div>
+
+		<div class="row level1">
+		  <div class="col-sm-9">
+		    Level 1: .col-sm-9
+		    <div class="row level2">
+		      <div class="col-xs-8 col-sm-6">
+		        Level 2: .col-xs-8 .col-sm-6
+		      </div>
+		      <div class="col-xs-4 col-sm-6">
+		        Level 2: .col-xs-4 .col-sm-6
+		      </div>
+		    </div>
+		  </div>
+		</div>
+
+		<h1>h1. Bootstrap heading <small>Secondary text</small></h1>
+		<h2>h2. Bootstrap heading <small>Secondary text</small></h2>
+		<h3>h3. Bootstrap heading <small>Secondary text</small></h3>
+		<h4>h4. Bootstrap heading <small>Secondary text</small></h4>
+		<h5>h5. Bootstrap heading <small>Secondary text</small></h5>
+		<h6>h6. Bootstrap heading <small>Secondary text</small></h6>
+
+		<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat.</p>
+
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+		<p>This is example text.  This is example text.</p>
+		<small>This sentence is smaller.</small>
+
+		<blockquote>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</blockquote>
+
+
+
 	</div>
 
 	
